动画复杂化

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pixi.js demo</title>
+  <link rel="stylesheet" href="assets/css/reset-1.5.0.css">
 </head>
 <body>
   <script src="src/main.js"></script>
