feat: apng demo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="assets/css/reset-1.5.0.css">
 </head>
 <body>
-  <script src="src/main.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
